# ImageToAscii

./: CMakeLists.txt  Main.cpp  README.md  install.sh
AsciiConversor/: Dependencies.hpp  ImageProcessor.cpp  ImageProcessor.hpp  OpenCVDependencies.hpp  VideoProcessor.cpp  VideoProcessor.cpp.old  VideoProcessor.hpp  colors.hpp
AsciiConversor/BinFiles/: ReadBin.cpp  ReadBin.hpp  WriteBin.cpp  WriteBin.hpp
ImageToAsciiGUI/: CMakeLists.txt  Main.cpp
